can submit a kinsman

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,15 +17,15 @@
         <p class="text-light font-weight-bold text-uppercase px-4 small pt-4 pb-2">Kinsman</p>
 
         <div class="form-floating mb-3 mx-4">
-            <input id="name" type="text" class="form-control" placeholder="John Doe" required>
+            <input id="name" type="text" class="form-control">
             <label for="name" class="form-label">name</label>
         </div>
         <div class="form-floating mb-3 mx-4">
-            <input id="birthDate" type="date" class="form-control" placeholder="birth date">
+            <input id="birthDate" type="date" class="form-control">
             <label for="birthDate" class="form-label">birth date</label>
         </div>
         <div class="form-floating mb-3 mx-4">
-            <input id="deathDate" type="date" class="form-control" placeholder="death date">
+            <input id="deathDate" type="date" class="form-control">
             <label for="deathDate" class="form-label">death date</label>
         </div>
 
@@ -36,15 +36,15 @@
         <p class="text-light font-weight-bold text-uppercase px-4 small py-2">Family</p>
 
         <div class="form-floating mb-3 mx-4">
-            <input id="parent1" type="text" class="form-control" placeholder="John Doe">
+            <input id="parent1" type="text" class="form-control">
             <label for="parent1" class="col-form-label">first parent</label>
         </div>
         <div class="form-floating mb-3 mx-4">
-            <input id="parent2" type="text" class="form-control" placeholder="Jane Doe">
+            <input id="parent2" type="text" class="form-control">
             <label for="parent2" class="col-form-label">second parent</label>
         </div>
         <div class="form-floating mb-3 mx-4">
-            <textarea id="children" class="form-control" rows="5" placeholder="Joshua Doe, Jacob Doe"></textarea>
+            <textarea id="children" class="form-control" rows="5"></textarea>
             <label for="children" class="col-form-label">children, comma separated</label>
         </div>
         <button id="submitFamily" type="submit" class="btn btn-primary mx-4 mt-2">Submit</button>
