--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,23 +28,23 @@
             <div class="modal-body">
                 <form>
                     <div class="form-group">
-                        <label for="kinsmanSelector">From</label>
-                        <select id="kinsmanSelector" class="form-control" required></select>
+                        <label for="sourceKinsmanSelector">Relation from</label>
+                        <select id="sourceKinsmanSelector" class="form-control" required></select>
                     </div>
                     <div class="form-group mt-2">
-                        <label for="newKinsmanName">To a new kinsman</label>
-                        <input id="newKinsmanName" type="text" class="form-control" required>
+                        <label for="targetKinsmanSelector">To kinsman</label>
+                        <select id="targetKinsmanSelector" class="form-control" required></select>
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="birthDate">Birth date</label>
-                            <input type="date" class="form-control" id="birthDate" placeholder="Birth date">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label for="deathDate">Death date</label>
-                            <input type="date" class="form-control" id="deathDate" placeholder="Death date">
-                        </div>
-                    </div>
+<!--                    <div class="form-row">-->
+<!--                        <div class="form-group col-md-6">-->
+<!--                            <label for="birthDate">Birth date</label>-->
+<!--                            <input type="date" class="form-control" id="birthDate" placeholder="Birth date">-->
+<!--                        </div>-->
+<!--                        <div class="form-group col-md-6">-->
+<!--                            <label for="deathDate">Death date</label>-->
+<!--                            <input type="date" class="form-control" id="deathDate" placeholder="Death date">-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </form>
             </div>
             <div class="modal-footer">
