making services work

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -64,7 +64,7 @@
             <div class="modal-body">
                 <form>
                     <div class="form-group">
-                        <label for="createOrUpdatePersonSelector">Relation from</label>
+                        <label for="createOrUpdatePersonSelector">New person</label>
                         <input type="text" id="createOrUpdatePersonSelector" class="form-control" required/>
                     </div>
                     <div class="form-row">
