added colors on generation

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -104,6 +104,7 @@
 <script src="bootstrap/5.0.0-beta1/js/bootstrap.bundle.min.js"></script>
 <script src="file-saver/dist/FileSaver.min.js"></script>
 <script src="d3js/6.2.0/d3.js"></script>
+<script src="chroma.js/0.6.1/chroma.min.js"></script>
 <script src="api.js"></script>
 <script src="graph.js"></script>
 <script src="ui.js"></script>
