--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,8 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
-</head>
+	<script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
+ </head>
 
 <body>
 </body>
