--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel="stylesheet" href="/global.css" />
 
 	<script defer src='/build/bundle.js'></script>
 	<script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
