--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/global.css" />
 
 	<script defer src='/build/bundle.js'></script>
-	<script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
+	<script src="https://accounts.google.com/gsi/client" async defer></script>
  </head>
 
 <body>
