--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,8 +11,10 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel="stylesheet" href="/global.css" />
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='vendor/bootstrap/js/bootstrap.bundle.min.js'></script>
 	<script src="https://accounts.google.com/gsi/client" async defer></script>
+	<script defer src='/build/bundle.js'></script>
+
  </head>
 
 <body>
