--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="vendor/bootstrap-icons/font/bootstrap-icons.css">
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel="stylesheet" href="/global.css" />
 
