--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>project stemma</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/webp' href='assets/icon.webp'>
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="vendor/bootstrap-icons/font/bootstrap-icons.css">
 	<link rel='stylesheet' href='/build/bundle.css'>
