aws-migration: working on demo client

--- a/client-demo/index.html
+++ b/client-demo/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <div id="g_id_onload"
-         data-client_id="REPLACE_ME_GOOGLE_APP_CLIENT_ID"
+         data-client_id="584519661541-m7jkpf0o4cu08jpiq4eo4bmaoa6ah7j1.apps.googleusercontent.com"
          data-context="signin"
          data-ux_mode="popup"
          data-callback="onSignIn"
