--- a/client-demo/index.html
+++ b/client-demo/index.html
@@ -5,12 +5,11 @@
     <meta name="author" content="acantril">
     <meta name="google-signin-scope" content="profile email">
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.19.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="scripts2.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
-
+<div>hello-world-222</div>
     <div id="g_id_onload"
          data-client_id="584519661541-m7jkpf0o4cu08jpiq4eo4bmaoa6ah7j1.apps.googleusercontent.com"
          data-context="signin"
