--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,10 +9,10 @@
 	<link rel='icon' type='image/webp' href='assets/icon.webp'>
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="vendor/bootstrap-icons/font/bootstrap-icons.css">
-	<link rel='stylesheet' href='/build/bundle.css'>
-	<link rel="stylesheet" href="/global.css" />
+	<link rel='stylesheet' href='bundle.css'>
+	<link rel="stylesheet" href="global.css" />
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='bundle.js'></script>
  </head>
 
 <body>
