--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
@@ -13,9 +14,13 @@
 	<link rel="stylesheet" href="global.css" />
 
 	<script defer src='build/bundle.js'></script>
- </head>
+	<script defer src='vendor/bootstrap/js/bootstrap.bundle.min.js'></script>
+</head>
 
 <body>
-	<main><App/></main>
+	<main>
+		<App />
+	</main>
 </body>
+
 </html>
