--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,8 +13,7 @@
 	<link rel='stylesheet' href='build/bundle.css'>
 	<link rel="stylesheet" href="global.css" />
 
-	<script defer src='build/bundle.js'></script>
-	<script defer src='vendor/bootstrap/js/bootstrap.bundle.min.js'></script>
+	<script async src='build/bundle.js'></script>
 </head>
 
 <body>
