--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
 
 	<title>project stemma</title>
 
-	<link rel='icon' type='image/webp' href='assets/icon.webp'>
+	<link rel='icon' type='image/webp' href='assets/favicon.webp'>
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="vendor/bootstrap-icons/font/bootstrap-icons.css">
 	<link rel='stylesheet' href='build/bundle.css'>
